TestSuite/PascalABCTests/errors/err0148.pas
var f : file of byte;
begin
readln(f);
end.